change folio part

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Portfolio Website</title>
         <link
         rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"  
         />
         <link
         rel="stylesheet"
@@ -84,7 +84,7 @@
 
           
         </p>
-        <a href="#" class="btn">Download CV</a>
+        <a href="./YousufJamil_Resume_2023.pdf" target="_blank" class="btn">Download CV</a>
         </div>
 
         <div class="column-2 image">
@@ -152,8 +152,8 @@
         />
         <div class="card" data-card="landing page">
         <div class="card-content z-index">
-        <img src="./img/app-icon.svg" class="icon" alt="" />
-        <h3 class="title-sm">Landing page Design</h3>
+          <img src="./img/design-icon.svg" class="icon" alt="" />
+        <h3 class="title-sm">Landing page </h3>
         <p class="text">
         Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Voluptatum hic veniam nihil.
@@ -219,128 +219,129 @@
         <div class="section-body">
         <div class="filter">
         <button class="filter-btn active" data-filter="*">All</button>
-        <button class="filter-btn" data-filter=".ui">Figma To HTML</button>
-        <button class="filter-btn" data-filter=".webdev">Bootstrap</button>
-        <button class="filter-btn" data-filter=".appdev">
+        <button class="filter-btn" data-filter=".figma">Figma To HTML</button>
+        <button class="filter-btn" data-filter=".bootstarp">Bootstrap</button>
+        <button class="filter-btn" data-filter=".tailwind">
        Tailwind
         </button>
-        <button class="filter-btn" data-filter=".logo-design">
-       Wordpress
+        <button class="filter-btn" data-filter=".React">
+       React
         </button>
         </div>
 
         <div class="grid">
-        <div class="grid-item logo-design">
+        <div class="grid-item figma">
         <div class="gallery-image">
-        <img src="./img/portfolio/port1.jpg" alt="" />
+        <img src="./img/portfolio/port1.png" alt="" />
         <div class="img-overlay">
         <div class="plus"></div>
         <div class="img-description">
-        <h3>Logo Design</h3>
-        <h5>View Demo</h5>
+        <h3>Real-estate Website</h3>
+        <h3><a href="https://holux-html.netlify.app/" target="_blank">Live Link</a></h3>
+    
         </div>
         </div>
         </div>
         </div>
-        <div class="grid-item webdev">
+        <div class="grid-item bootstarp">
         <div class="gallery-image">
-        <img src="./img/portfolio/port2.png" alt="" />
+       <img src="./img/portfolio/port2.png" alt="" />
         <div class="img-overlay">
         <div class="plus"></div>
         <div class="img-description">
-        <h3>Web Development</h3>
-        <h5>View Demo</h5>
+          <h3>landsite Website</h3>
+          <h3><a href="https://landpagy-html5.netlify.app/" target="_blank">Live Link</a></h3>
         </div>
         </div>
         </div>
         </div>
-        <div class="grid-item ui webdev">
+        <div class="grid-item figma ">
         <div class="gallery-image">
         <img src="./img/portfolio/port3.png" alt="" />
         <div class="img-overlay">
         <div class="plus"></div>
         <div class="img-description">
-        <h3>Web Design</h3>
-        <h5>View Demo</h5>
+          <h3>Sushi Website</h3>
+          <h3><a href="https://sushi-html.netlify.app/" target="_blank">Live Link</a></h3>
         </div>
         </div>
         </div>
         </div>
-        <div class="grid-item ui">
+        <div class="grid-item figma">
         <div class="gallery-image">
         <img src="./img/portfolio/port4.png" alt="" />
         <div class="img-overlay">
         <div class="plus"></div>
         <div class="img-description">
-        <h3>UI / UX Design</h3>
-        <h5>View Demo</h5>
+          <h3>Barber Website</h3>
+          <h3><a href="https://yousufj733.github.io/Barberstudio/" target="_blank">Live Link</a></h3>
         </div>
         </div>
         </div>
         </div>
-        <div class="grid-item logo-design">
+        <div class="grid-item figma">
         <div class="gallery-image">
         <img src="./img/portfolio/port5.jpg" alt="" />
         <div class="img-overlay">
         <div class="plus"></div>
         <div class="img-description">
-        <h3>Logo Design</h3>
-        <h5>View Demo</h5>
+          <h3>Food Website</h5>
+          <h3><a href="https://yousufj733.github.io/Omnifood/" target="_blank">Live Link</a></h3>
         </div>
         </div>
         </div>
         </div>
-        <div class="grid-item appdev">
+        <div class="grid-item bootstarp">
         <div class="gallery-image">
         <img src="./img/portfolio/port6.jpg" alt="" />
         <div class="img-overlay">
         <div class="plus"></div>
         <div class="img-description">
-        <h3>App Development</h3>
-        <h5>View Demo</h5>
+          <h3>Donate Website</h3>
+          <h3><a href="https://fundo-html.netlify.app/" target="_blank">Live Link</a></h3>
         </div>
         </div>
         </div>
         </div>
-        <div class="grid-item logo-design">
+        <div class="grid-item figma">
         <div class="gallery-image">
-        <img src="./img/portfolio/port7.jpg" alt="" />
+        <img src="./img/portfolio/port7.png" alt="" />
         <div class="img-overlay">
         <div class="plus"></div>
         <div class="img-description">
-        <h3>Logo Design</h3>
-        <h5>View Demo</h5>
+        <h3>Ecommerce website </h3>
+        <h3><a href="https://yousufj733.github.io/Shopkart/" target="_blank">Live Link</a></h3>
         </div>
         </div>
         </div>
         </div>
-        <div class="grid-item appdev ui">
+        <div class="grid-item  ">
         <div class="gallery-image">
         <img src="./img/portfolio/port8.png" alt="" />
         <div class="img-overlay">
         <div class="plus"></div>
         <div class="img-description">
-        <h3>App Development</h3>
-        <h5>View Demo</h5>
+          <h3>Portfolio website </h3>https://yousufj733.github.io/Square/
+        <h3><a href="https://yousufj733.github.io/Johnportfolio/" target="_blank">Live Link</a></h3>
         </div>
         </div>
         </div>
         </div>
-        <div class="grid-item ui webdev">
+        <div class="grid-item  ">
         <div class="gallery-image">
         <img src="./img/portfolio/port9.png" alt="" />
         <div class="img-overlay">
         <div class="plus"></div>
         <div class="img-description">
-        <h3>Web Design</h3>
-        <h5>View Demo</h5>
+          <h3>Hospital website  </h3>
+          <h3><a href="https://yousufj733.github.io/Square/" target="_blank">Live Link</a></h3>
         </div>
         </div>
         </div>
         </div>
         </div>
         <div class="more-folio">
-        <a href="#" class="btn">More Folio</a>
+        <a href="https://github.com/yousufj733" target="_blank" class="btn">More Folio</a>
         </div>
         </div>
         </div>
@@ -648,21 +649,21 @@
         <div class="contact-icon">
         <i class="fas fa-map-marker-alt"></i>
         </div>
-        <p class="info-text">Nairobi. Kenya</p>
+        <p class="info-text">Dhaka. Bangladesh</p>
         </div>
 
         <div class="information">
         <div class="contact-icon">
         <i class="fas fa-paper-plane"></i>
         </div>
-        <p class="info-text">lorem@ipsum.com</p>
+        <p class="info-text">yousufjamil733@gmail.com</p>
         </div>
 
         <div class="information">
         <div class="contact-icon">
         <i class="fas fa-phone-alt"></i>
         </div>
-        <p class="info-text">123-456-789</p>
+        <p class="info-text">+880-1748226725</p>
         </div>
         </div>
         </div>
