--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
           
         </p>
-        <a href="./YousufJamil_Resume_2023.pdf" target="_blank" class="btn">Download CV</a>
+        <a href="./Yousuf_Resume_2023.pdf" target="_blank" class="btn">Download CV</a>
         </div>
 
         <div class="column-2 image">
