--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         <div class="wrap">
         <div class="record-circle">
         <h2 class="number" data-num="5">0</h2>
-        <h4 class="sub-title">Awards</h4>
+        <h4 class="sub-title">Award</h4>
         </div>
         </div>
         </div>
